<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_controller"
    app:startDestination="@id/logInFragment">

    <fragment
        android:id="@+id/logInFragment"
        android:name="com.aiyu.furniture.ui.fragment.login.LogInFragment"
        android:label="@string/blank"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_logInFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/nav_controller"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.aiyu.furniture.ui.fragment.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.aiyu.furniture.ui.fragment.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cartFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.aiyu.furniture.ui.fragment.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_logInFragment"
            app:destination="@id/logInFragment"
            app:popUpTo="@id/nav_controller"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_profileFragment_to_editDetailsFragment"
            app:destination="@id/editDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.aiyu.furniture.ui.fragment.detail.DetailFragment"
        android:label=""
        tools:layout="@layout/fragment_detail_screen">
        <argument
            android:name="item"
            app:argType="com.aiyu.furniture.core.database.model.FurnitureModel" />
        <argument
            android:name="fromCart"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/editDetailsFragment"
        android:name="com.aiyu.furniture.ui.fragment.profile.edit.EditDetailsFragment"
        android:label="Edit Details"
        tools:layout="@layout/fragment_edit_details">
        <argument
            android:name="user"
            app:argType="com.aiyu.furniture.core.database.model.User" />
    </fragment>
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.aiyu.furniture.ui.fragment.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" >
        <action
            android:id="@+id/action_ordersFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addAddressFragment"
        android:name="com.aiyu.furniture.ui.fragment.address.AddAddressFragment"
        android:label="Address"
        tools:layout="@layout/fragment_add_address">
        <argument
            android:name="address"
            app:argType="com.aiyu.furniture.core.database.model.AddressModel"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/addressFragment"
        android:name="com.aiyu.furniture.ui.fragment.address.AddressFragment"
        android:label="@string/address"
        tools:layout="@layout/fragment_address" >
        <argument
            android:name="forPlaceOrder"
            app:argType="boolean" />
        <action
            android:id="@+id/action_addressFragment_to_placeOrderFragment"
            app:destination="@id/placeOrderFragment" />
        <action
            android:id="@+id/action_addressFragment_to_addAddressFragment"
            app:destination="@id/addAddressFragment" />
    </fragment>
    <action android:id="@+id/action_global_addressFragment" app:destination="@id/addressFragment" />
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="com.aiyu.furniture.ui.fragment.orders.OrderDetailsFragment"
        android:label="@string/order_details"
        tools:layout="@layout/fragment_order_details" >
        <argument
            android:name="order"
            app:argType="com.aiyu.furniture.core.database.model.OrderModel" />
    </fragment>
    <fragment
        android:id="@+id/placeOrderFragment"
        android:name="com.aiyu.furniture.ui.fragment.placeorder.PlaceOrderFragment"
        android:label="fragment_place_order"
        tools:layout="@layout/fragment_place_order" >
        <argument
            android:name="order"
            app:argType="com.aiyu.furniture.core.database.model.OrderModel" />
        <action
            android:id="@+id/action_placeOrderFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment" />
        <action
            android:id="@+id/action_placeOrderFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/nav_controller"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>