<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aiyu.furniture.ui.fragment.address.AddressFragment"
    android:padding="@dimen/grid_1">

    <LinearLayout
        android:id="@+id/linear_layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorSize="64dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_empty_address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/grid_1"
            android:contentDescription="@string/blank"
            android:src="@drawable/img_address" />

        <TextView
            android:id="@+id/text_view_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_your_address"
            android:textAppearance="?attr/textAppearanceTitleLarge" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:visibility="gone"
        tools:visibility="gone" />
</RelativeLayout>